feat: Crud Treino Realizado!